@@ -1,7 +1,6 @@
 package net.minestom.server.command;
 
 import net.minestom.server.network.packet.server.play.DeclareCommandsPacket;
-import org.jetbrains.annotations.NotNull;
 import org.opentest4j.AssertionFailedError;
 
 import java.math.BigInteger;
@@ -43,7 +42,7 @@ public class CommandTestUtils {
                     final String[] strings = splitDeclaration(s);
                     final ArrayList<String> result = new ArrayList<>();
                     for (String s1 : strings[0].split(" ")) {
-                        result.add(s1+"="+(strings[1].replaceAll("!", s1)));
+                        result.add(s1 + "=" + (strings[1].replaceAll("!", s1)));
                     }
                     return result;
                 },
@@ -51,7 +50,7 @@ public class CommandTestUtils {
                     final String[] strings = splitDeclaration(s);
                     final ArrayList<String> result = new ArrayList<>();
                     for (String s1 : strings[0].split(" ")) {
-                        result.add(s1+"="+(strings[1].replaceAll("%", "'"+s1+"'")));
+                        result.add(s1 + "=" + (strings[1].replaceAll("%", "'" + s1 + "'")));
                     }
                     return result;
                 },
@@ -59,7 +58,7 @@ public class CommandTestUtils {
                     final String[] strings = splitDeclaration(s);
                     final ArrayList<String> result = new ArrayList<>();
                     for (String s1 : strings[0].split(" ")) {
-                        result.add(s1+"="+(strings[1].replaceAll("§", "'"+(s1.toUpperCase(Locale.ROOT))+"'")));
+                        result.add(s1 + "=" + (strings[1].replaceAll("§", "'" + (s1.toUpperCase(Locale.ROOT)) + "'")));
                     }
                     return result;
                 }
@@ -71,7 +70,7 @@ public class CommandTestUtils {
             final StringBuilder builder = new StringBuilder();
             builder.append(packet.rootIndex());
             builder.append(lineSeparator);
-            @NotNull List<DeclareCommandsPacket.Node> nodes = packet.nodes();
+            List<DeclareCommandsPacket.Node> nodes = packet.nodes();
             for (int i = 0; i < nodes.size(); i++) {
                 DeclareCommandsPacket.Node node = nodes.get(i);
                 builder.append(i);
@@ -141,7 +140,7 @@ public class CommandTestUtils {
                         if (spaceIndex > -1 && spaceIndex < s.indexOf('=')) {
                             final String[] split = s.split("=", 2);
                             for (String s1 : split[0].split(" ")) {
-                                result.add(s1+"="+split[1]);
+                                result.add(s1 + "=" + split[1]);
                             }
                         } else {
                             result.add(s);
@@ -152,12 +151,12 @@ public class CommandTestUtils {
                     if (spaceIndex > -1 && spaceIndex < s.indexOf('-')) {
                         final String[] split = s.split("-", 2);
                         for (String s1 : split[0].split(" ")) {
-                            result.add(s1+"-"+split[1]);
+                            result.add(s1 + "-" + split[1]);
                         }
                     } else if (spaceIndex > -1 && spaceIndex < s.indexOf('+')) {
                         final String[] split = s.split("\\+", 2);
                         for (String s1 : split[0].split(" ")) {
-                            result.add(s1+"+"+split[1]);
+                            result.add(s1 + "+" + split[1]);
                         }
                     } else {
                         result.add(s);
@@ -171,7 +170,7 @@ public class CommandTestUtils {
             Map<String, String[]> references = new HashMap<>();
             Map<String, TestNode> nodes = new HashMap<>();
             final List<String> strings = preProcessString(input);
-            String rootId = strings.get(0);
+            final String rootId = strings.getFirst();
 
             for (String s : strings.stream().skip(0).toList()) {
                 if (s.length() < 3) continue; //invalid line
@@ -198,9 +197,9 @@ public class CommandTestUtils {
         }
 
         private static String resolveNode(String id, Map<String, String[]> references,
-                                              Map<String, TestNode> nodes, ArrayList<TestNode> result,
-                                              Map<String, String> nameToMetaPath,
-                                              List<Runnable> redirectSetters, String metaPath) {
+                                          Map<String, TestNode> nodes, ArrayList<TestNode> result,
+                                          Map<String, String> nameToMetaPath,
+                                          List<Runnable> redirectSetters, String metaPath) {
             final TestNode node = nodes.get(id);
             final String[] refs = references.get(id);
             final String path = metaPath + "#" + node.meta;
@@ -209,7 +208,7 @@ public class CommandTestUtils {
                 nameToMetaPath.put(id, path);
                 return path;
             } else if (refs[0] == null) {
-                 redirectSetters.add(() -> node.redirect.set(nameToMetaPath.get(refs[1])));
+                redirectSetters.add(() -> node.redirect.set(nameToMetaPath.get(refs[1])));
             } else {
                 for (String ref : refs) {
                     node.children.add(resolveNode(ref, references, nodes, result, nameToMetaPath, redirectSetters, path));
@@ -242,7 +241,7 @@ public class CommandTestUtils {
         builder.append(packet.rootIndex());
         builder.append(" [label=\"root\",shape=rectangle]");
         builder.append(statementSeparator);
-        @NotNull List<DeclareCommandsPacket.Node> nodes = packet.nodes();
+        List<DeclareCommandsPacket.Node> nodes = packet.nodes();
         for (int i = 0; i < nodes.size(); i++) {
             DeclareCommandsPacket.Node node = nodes.get(i);
             if ((node.flags & 0x3) != 0) {
